# setbert

./: .env.example  .gitignore  README.md  env.sh  generate_dataset.py  generate_datasets.py  models.env  models.sh  pyproject.toml  vars.sh
common/: callbacks.py  data.py  dataset.py  dna.py  fastq.py  layers.py  metrics.py  utils.py  wandb_utils.py
configs/: qiita_gg.yaml
jobs/: artifact_dnabert.py  bootstrap.py  dnabert_finetune_taxonomy_bertax.sh  dnabert_finetune_taxonomy_naive.sh  dnabert_finetune_taxonomy_topdown.sh  dnabert_pretrain.py  dnabert_pretrain_silva_64d_150l.sh  finetune_dnabert_autoencoder.py  pretrain_dnabert.py  setbert_evaluate_sfd_only_classification_64d_150l.sh  setbert_evaluate_sfd_only_classification_shallow_128d_250l.sh  setbert_evaluate_sfd_only_classification_shallow_64d_150l.sh  setbert_finetune_sfd_binary_classification_128d_250l.sh  setbert_finetune_sfd_binary_classification_64d_150l.sh  setbert_finetune_sfd_classifier.sh  setbert_finetune_sfd_only_classifier_128d_250l.sh  setbert_finetune_sfd_only_classifier_64d_150l.sh  setbert_finetune_sfd_only_classifier_shallow_128d_250l.sh  setbert_finetune_sfd_only_classifier_shallow_64d_150l.sh  setbert_finetune_taxonomy_topdown.sh  setbert_pretrain_64d_150l.sh  setbert_pretrain_sfd_only_128d_250l.sh  setbert_pretrain_sfd_only_64d_150l.sh
manuscript/: diagrams.drawio
notebooks/: Alex Pathogen Load.ipynb  AlexDatasets-Copy1.ipynb  AlexDatasets.ipynb  Artificial HTS Sample Generation.ipynb  Attention Attribution.ipynb  CosFormer.ipynb  DNA Embedding Analysis.ipynb  DNA Examples.ipynb  DNA GAST.ipynb  DNABERT Taxonomy 250l.ipynb  DNABERT Taxonomy BERTax.ipynb  DNABERT Taxonomy Hierarchy Naive.ipynb  DNABERT Taxonomy Naive.ipynb  DNABERT Taxonomy TopDown.ipynb  DNABERT Taxonomy Topdown Extended.ipynb  DNABERT Taxonomy.ipynb  DNABERT and SetBERT Demo.ipynb  DNABERT.ipynb  DNAGAST Results.ipynb  Hopland Contrastive.ipynb  Hopland.ipynb  Qiime Classifier.ipynb  README.md  SFD Only Analysis.ipynb  SFD.ipynb  SetBERT Alex.ipynb  (+12 more)
(+193 files in other folders)
