[project]
name = "deep-dna"
version = "0.0.1"
authors = [
  { name="David W. Ludwig II", email="davidludwigii@gmail.com" }
]
description = "Deep learning models for handling DNA sequences and high-throughput sequencing samples."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "lmdbm-lockable >= 0.0.5",
  "deepctx >= 0.0.1",
  "dnadb >= 0.8.1",
  "numba >= 0.55.2",
  "tensorflow >= 2.9.0",
  "tf-settransformer >= 0.2.5",
  "wandb >= 0.15.10"
]

[project.urls]
"Homepage" = "https://github.com/DLii-Research/deep-dna"
"Bug Tracker" = "https://github.com/DLii-Research/deep-dna/issues"

[tool.ruff]
line-length = 100
